--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,8 +3,15 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Registration Form</title>
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/registration.css}" />
+<!-- Google Font: Source Sans Pro -->
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+<!-- Font Awesome -->
+<link rel="stylesheet"
+	href="../static/plugins/fontawesome-free/css/all.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="../static/dist/css/adminlte.min.css">
+
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script
@@ -13,63 +20,70 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<form th:action="@{/}" method="get">
-		<button class="btn btn-md btn-warning btn-block" type="Submit">Go
-			To Login Page</button>
-	</form>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<form autocomplete="off" action="#" th:action="@{/registration}"
-					th:object="${user}" method="post" class="form-horizontal"
-					role="form">
-					<h2>Registration Form</h2>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-								class="validation-message"></label> <input type="text"
-								th:field="*{name}" placeholder="Name" class="form-control" />
-						</div>
-					</div>
 
-					<div class="form-group">
-						<div class="col-sm-9">
-							<label th:if="${#fields.hasErrors('lastName')}"
-								th:errors="*{lastName}" class="validation-message"></label> <input
-								type="text" th:field="*{lastName}" placeholder="Last Name"
-								class="form-control" />
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="text" th:field="*{email}" placeholder="Email"
-								class="form-control" /> <label
-								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-								class="validation-message"></label>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-9">
-							<input type="password" th:field="*{password}"
-								placeholder="Password" class="form-control" /> <label
-								th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-								class="validation-message"></label>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-sm-9">
-							<button type="submit" class="btn btn-primary btn-block">Register
-								User</button>
-						</div>
-					</div>
-
-					<span th:utext="${successMessage}"></span>
-
-				</form>
-			</div>
+	<!-- /.card -->
+	<!-- Horizontal Form -->
+	<div class="card card-info"
+		style="margin-top: 10%; margin-bottom: 10%; margin-left: 25%; margin-right: 25%">
+		<div class="card-header">
+			<h1 class="card-title"
+				style="margin-bottom: 50px; text-align: center;">Registration</h1>
 		</div>
+		<!-- /.card-header -->
+		<!-- form start -->
+		<form autocomplete="off" action="#" th:action="@{/registration}"
+					th:object="${user}" method="post" class="form-horizontal">
+			<div class="card-body">
+				<div class="form-group row">
+					<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name</label>
+					<div class="col-sm-10">
+						<input type="text" th:field="*{name}" placeholder="Name" class="form-control" >
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label  th:if="${#fields.hasErrors('lastName')}"
+								th:errors="*{lastName}" class="col-sm-2 col-form-label">Last Name</label>
+					<div class="col-sm-10">
+						<input type="text" th:field="*{lastName}" placeholder="Last Name"
+								class="form-control">
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="col-sm-2 col-form-label">Email</label>
+					<div class="col-sm-10">
+						<input type="email" th:field="*{email}" placeholder="Email" class="form-control">
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="col-sm-2 col-form-label">Password</label>
+					<div class="col-sm-10">
+						<input type="password" th:field="*{password}" class="form-control"
+							placeholder="Password" >
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<div class="offset-sm-2 col-sm-2" style="float: right">
+						<button type="submit" class="btn btn-info">Register user</button>
+					</div>
+				</div>
+			</div>
+		</form>
+		<!-- /.card-body -->
+		<div class="card-footer">
+			<div class="offset-sm-2 col-sm-3" style="float: right">
+				<a th:href="@{/}">Go To Login Page</a>
+			</div>
+			<br/>
+			<span th:utext="${successMessage}"></span>
+		</div>
+		<!-- /.card-footer -->
+
 	</div>
+	<!-- /.card -->
 
 </body>
 </html>
